VG-HOTFIX-1 fix missing grades, update README.md